# DynamicPartitioning

./: CMakeLists.txt  CPU.cpp  CPU.h  Menu.cpp  Menu.h  PartitionSpace.cpp  PartitionSpace.h  Process.cpp  Process.h  RAM.cpp  RAM.h  RAMwithBest.h  RAMwithBestFit.h  RAMwithFirstFit.h  RAMwithOeder.cpp  RAMwithOeder.h  RAMwithWorst.h  RAMwithWorstFit.h  README.md  main.cpp
